--- a/templates/html/pages/cliente/agendamentos-cliente.html
+++ b/templates/html/pages/cliente/agendamentos-cliente.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h1 class="text-center">Meus agendamentos</h1>
+<h1 class="text-center">Meus agendamentos de visita</h1>
 <div class="container d-flex flex-column align-items-center">
     <div class="d-flex justify-content-end mb-3 w-100">
         <form action="{{ url_for('novo_agendamento') }}" method="GET">
