--- a/templates/html/pages/cliente/formulario-agendamento.html
+++ b/templates/html/pages/cliente/formulario-agendamento.html
@@ -1,20 +1,20 @@
 {% extends "base.html" %}
-
 {% block content %}  
 
 <div class="container d-flex justify-content-center align-items-center vh-100">
-    <div class="w-50">
+    <div class="w-50 border p-4 rounded">
         <h1 class="text-center mb-4">Novo Agendamento</h1>
         <form action="{{ url_for('novo_agendamento') }}" method="POST">
             <div class="form-group mb-3">
                 <label for="data">Data</label>
-                <input type="date" name="data" class="form-control">
+                <input type="date" name="data" class="form-control" required>
             </div>
             <div class="form-group mb-3">
                 <label for="horario">Horário</label>
-                <input type="time" name="horario" class="form-control" id="horario">
+                <input type="time" name="horario" class="form-control" id="horario" required>
             </div>
-            <div class="d-flex justify-content-center">
+            <div class="d-flex justify-content-between">
+                <a href="{{ url_for('agendamentos_cliente') }}" class="btn btn-secondary">Voltar</a>
                 <button type="submit" class="btn btn-primary">Salvar</button>
             </div>
         </form>
