deletar cliente funcionando

--- a/templates/base.html
+++ b/templates/base.html
@@ -53,6 +53,7 @@
                                         <li><a class="dropdown-item" href="{{ url_for('perfil') }}">Perfil</a></li>
                                         <li><a class="dropdown-item" href="{{ url_for('agendamentos_cliente') }}">Agendamentos</a></li>
                                         <li><a class="dropdown-item" href="{{ url_for('eventos_cliente') }}">Eventos</a></li>
+                                        <li><hr class="dropdown-divider"></li>
                                         <li><a class="dropdown-item" href="{{ url_for('ver_parceiros_cliente') }}">Nossos parceiros</a></li>
                                         <li><hr class="dropdown-divider"></li>
                                         <li><a class="dropdown-item" href="{{ url_for('logout') }}">Logout</a></li>
