--- a/templates/html/register/login.html
+++ b/templates/html/register/login.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %
 
 {% block content %}
 <div class="bg-img d-flex align-items-center justify-content-center min-vh-100">
