alteração na regra de negócio e aplicação no backend

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
                                         <li><a class="dropdown-item" href="{{ url_for('eventos_admin') }}">Eventos</a></li>
                                         <li><a class="dropdown-item" href="{{ url_for('clientes_admin') }}">Clientes</a></li>
                                         <li><a class="dropdown-item" href="{{ url_for('pagamentos_admin') }}">Pagamentos</a></li>
-                                        <li><a class="dropdown-item" href="{{ url_for('kits_mobilia_admin') }}">Kits Mobília</a></li>
+                                        <li><a class="dropdown-item" href="{{ url_for('mobilias_admin') }}">Mobílias</a></li>
                                         <li><a class="dropdown-item" href="{{ url_for('parceiros_admin') }}">Parceiros</a></li>
                                         <li><hr class="dropdown-divider"></li>
                                         <li><a class="dropdown-item" href="{{ url_for('logout') }}">Logout</a></li>
@@ -55,6 +55,7 @@
                                         <li><a class="dropdown-item" href="{{ url_for('eventos_cliente') }}">Eventos</a></li>
                                         <li><hr class="dropdown-divider"></li>
                                         <li><a class="dropdown-item" href="{{ url_for('ver_parceiros_cliente') }}">Nossos parceiros</a></li>
+                                        <li><a class="dropdown-item" href="{{ url_for('mobilias_cliente') }}">Alugue mobília</a></li>
                                         <li><hr class="dropdown-divider"></li>
                                         <li><a class="dropdown-item" href="{{ url_for('logout') }}">Logout</a></li>
                                     </ul>
