--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
                                         {{ session.nome_cliente }}
                                     </a>
                                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                                        <li><a class="dropdown-item" href="{{ url_for('dashboard_admin') }}">Tela inicial</a></li>
+                                        <li><a class="dropdown-item" href="{{ url_for('dashboard') }}">Tela principal</a></li>
                                         <li><a class="dropdown-item" href="{{ url_for('perfil') }}">Perfil</a></li>
                                         <li><a class="dropdown-item" href="{{ url_for('agendamentos_admin') }}">Agendamentos</a></li>
                                         <li><a class="dropdown-item" href="{{ url_for('eventos_admin') }}">Eventos</a></li>
@@ -49,7 +49,7 @@
                                         {{ session.nome_cliente }}
                                     </a>
                                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                                        <li><a class="dropdown-item" href="{{ url_for('dashboard_cliente') }}">Tela inicial</a></li>
+                                        <li><a class="dropdown-item" href="{{ url_for('dashboard') }}">Tela principal</a></li>
                                         <li><a class="dropdown-item" href="{{ url_for('perfil') }}">Perfil</a></li>
                                         <li><a class="dropdown-item" href="{{ url_for('agendamentos_cliente') }}">Agendamentos</a></li>
                                         <li><a class="dropdown-item" href="{{ url_for('eventos_cliente') }}">Eventos</a></li>
