--- a/templates/html/pages/cliente/dashboard-cliente.html
+++ b/templates/html/pages/cliente/dashboard-cliente.html
@@ -1,22 +1,31 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
 {% block content %}
-<div class="bg-img min-vh-100">
-    <h1 class="dashboard">Dashboard</h1>
-    <div id="calendar"></div>
-</div>
+<h1>Dashboard {{ session.nome_cliente }}</h1>
 
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        var calendarEl = document.getElementById('calendar');
-        // Certifique-se de que 'eventos' está corretamente renderizado como um JSON válido
-        var eventos = JSON.parse('{{ eventos | tojson | safe }}');
-        var calendar = new FullCalendar.Calendar(calendarEl, {
-            initialView: 'dayGridMonth',
-            events: eventos
-        });
-        calendar.render();
-    });
-</script>
+<div class="container">
+    <div class="row">
+        {% for data, eventos in calendario.items() %}
+        <div class="col-md-3">
+            <div class="card mb-3">
+                <div class="card-header">
+                    {{ data }}
+                </div>
+                <div class="card-body">
+                    {% if eventos %}
+                        <ul class="list-group list-group-flush">
+                            {% for evento in eventos %}
+                                <li class="list-group-item">{{ evento }}</li>
+                            {% endfor %}
+                        </ul>
+                    {% else %}
+                        <p>Nenhum evento marcado</p>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
 
 {% endblock %}
