povoando bd e arrumando algumas rotas

--- a/templates/html/pages/perfil.html
+++ b/templates/html/pages/perfil.html
@@ -26,7 +26,7 @@
                     </div>
 
                     <div class="d-flex justify-content-between align-items-center">
-                        <a id="redirection" href="{{ url_for('dashboard_cliente') }}" class="btn btn-secondary">Voltar</a>
+                        <a id="redirection" href="{{ url_for('dashboard') }}" class="btn btn-secondary">Voltar</a>
                         <button type="submit" class="btn btn-login">Atualizar</button>
                     </div>
                 </fieldset>
