pequeno detalhe no form mobilia

--- a/templates/html/pages/admin/formulario-mobilia-admin.html
+++ b/templates/html/pages/admin/formulario-mobilia-admin.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container d-flex justify-content-center mt-5">
     <form action="{{ url_for('nova_mobilia_admin') }}" method="POST" class="w-50 p-4 border rounded">
-        <h1 class="text-center mb-4">Novo kit mobília</h1>
+        <h1 class="text-center mb-4">Nova mobília</h1>
         <div class="form-group mb-3">
             <label for="quantidade">Quantidade disponível:</label>
             <input type="number" class="form-control" id="quantidade" name="quantidade" required>
